<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.modashmo.lestudio.MainActivity">

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/le_studio_home" />

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorAccent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:alpha="0.95"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingEnd="@dimen/padding_right"
            android:paddingStart="@dimen/padding_left"
            android:paddingTop="8dp"
            android:text="@string/headline_english"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:alpha="0.95"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingEnd="@dimen/padding_right"
            android:paddingStart="@dimen/padding_left"
            android:text="@string/title_english"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorAccent2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subheading_english"
            android:alpha="0.6"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingEnd="@dimen/padding_right"
            android:paddingStart="@dimen/padding_left"
            android:paddingTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textDesciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingEnd="@dimen/padding_right"
            android:paddingStart="@dimen/padding_left"
            android:text="@string/description_english"
            style="@style/TextDescription" />

        <RelativeLayout
            android:id="@+id/layoutContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--
                For the contact information below, I have decided
                to use the element ImageView for the images instead
                of the DrawableLeft component of TextView.
                That is because I had to customise the ImageView in order
                to have the correct size and colour since I don't have
                proper images. These were captured from the internet.

                Ideally, I would work with correct sized images and
                use the DrawableLeft attribute of TextView element.
            -->

            <ImageView
                android:id="@+id/imageCall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:alpha=".2"
                android:layout_marginEnd="@dimen/padding_left"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_marginRight="@dimen/padding_right"
                android:layout_marginStart="@dimen/padding_right"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_call_black_48dp"/>

            <ImageView
                android:id="@+id/imageEmail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/imageCall"
                android:alpha=".2"
                app:srcCompat="@drawable/ic_email_black_48dp"/>

            <ImageView
                android:id="@+id/imageLocation"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/imageEmail"
                android:alpha=".2"
                app:srcCompat="@drawable/ic_room_black_48dp" />

            <TextView
                android:id="@+id/textCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageCall"
                android:layout_toEndOf="@id/imageCall"
                android:layout_marginTop="18dp"
                style="@style/TextDescription"
                android:text="@string/call" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextDescription"
                android:text="@string/email"
                android:layout_alignTop="@+id/imageEmail"
                android:layout_toRightOf="@+id/imageEmail"
                android:layout_toEndOf="@+id/imageEmail" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageLocation"
                android:layout_toEndOf="@id/imageLocation"
                android:layout_below="@id/textEmail"
                android:layout_marginTop="14dp"
                style="@style/TextDescription"
                android:text="@string/location" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
